# VulcanAI

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: linter.yml  tests.yml
resources/examples/safebot/: ros2_node.py  safebot_tools.py  tmp_move_robot.py
resources/ros_types/: eprosima_bot_interfaces_installation.sh
resources/ros_types/eprosima_bot_interfaces/: CMakeLists.txt  package.xml
resources/ros_types/eprosima_bot_interfaces/eprosima_bot_interfaces/msg/: EProsimaBotConfig.msg
saved_plans/: move_down_1.json  move_left_1.json  move_right_1.json  move_tray_3_times.json  move_tray_val_10.json  move_up_1.json  move_up_2_tray.json
src/vulcanai/: __init__.py  __init__.pyi  console.py  embedder.py  executor.py  llm_agent.py  logger.py  manager.py  manager_plan.py  plan_types.py  tool_registry.py  tools.py
src/vulcanai/console/: CustomLogTextArea.py  TerminalSession.py  __init__.py  __init__.pyi  console.py  logger.py  modal_screens.py  terminal_session.py  utils.py  widget_custom_log_text_area.py  widget_spinner.py
src/vulcanai/core/: __init__.py  __init__.pyi  agent.py  executor.py  llm_agent.py  manager.py  manager_iterator.py  manager_plan.py  plan_types.py  validator.py
src/vulcanai/models/: __init__.py  __init__.pyi  gemini.py  model.py  ollama_model.py  openai.py
src/vulcanai/tools/: __init__.py  __init__.pyi  custom_node.py  default_tools.py  embedder.py  tool_registry.py  tools.py  utils.py
src/vulcanai_turtlesim_demo/: package.xml  setup.py
src/vulcanai_turtlesim_demo/vulcanai_turtlesim_demo/: ros2_node.py  turtlesim_tools.py
tests/: test_executor.py  test_tool_registry.py  test_validator.py
tests/integration_tests/: test_iterative_manager.py
tests/resources/: test_composite_tool.py  test_tools.py
tests/unittest/: __init__.py  test_console.py  test_custom_log_text_area.py  test_default_tools.py  test_executor.py  test_tool_registry.py  test_validator.py
