[build-system]
requires = ["setuptools>=45", "wheel"]

[project]
name = "vulcanai"
version = "0.1.0"
description = "VulcanAI: the LLM library."
readme = "README.md"
authors = [{ name = "Carlos Ferreira", email = "carlosferreira@eprosima.com" }]
maintainers = [{ name = "Carlos Ferreira", email = "carlosferreira@eprosima.com" }]
license = 'Apache-2.0'
license-files = [ "LICENSE" ]
keywords = ["Robotics", "LLM", "VLM", "VLA", "Vulcanexus", "ROS2"]
requires-python = ">=3.10, <4"

dependencies = [
    "google-genai==1.39.0",
    "numpy==2.2.6",
    "ollama==0.6.0",
    "openai==1.108.0",
    "prompt_toolkit==3.0.52",
    "rich==14.2.0",
    "sentence-transformers==5.1.0",
    "textual==6.5.0",
    "textual-dev==1.8.0",
    "textual-serve==1.1.3",
    "typeguard==2.13",
    "pyperclip==1.11.0",
]

[project.optional-dependencies]
test = [
    "pytest==8.4.2",
]

[project.urls]
"eProsima" = "https://www.eprosima.com/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vulcanai = ["py.typed", "*.pyi", "**/*.pyi"]

[project.scripts]
vulcanai-console = "vulcanai.console.console:main"

# Linter options
[tool.ruff]
line-length = 119
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
# E: pycodestyle errors, F: pyflakes, I: import sorting
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["vulcanai"]

[project.entry-points."vulcanai.tools.default_tools"]
default_tools = "vulcanai.tools.default_tools"
